--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>포트폴리오</title>
+    <title>김진우 포트폴리오</title>
   </head>
   <body>
-    <h1>테스트</h1>
-    <p>test</p>
-    <p>123</p>
+    <h2>안녕하세요, 한 길만 걸어온 개발자 김진우라고 합니다.</h2>
+    <p>중학교때는 각종 컴퓨터 자격증을 따고</p>
+    <p>고등학교때는 컴퓨터미디어보안과에 입학하여 컴퓨터 구조와 네트워크 및 간단한 언어를 배우고</p>
+    <p>대학교때는 개발자가 되고 싶어 IT소프트웨어과에 입학하게 개발의 지식을 넓여왔습니다.</p>
+    <p>그리고 이제는 한 길로만 걸어온 길을 따라 어엿한 개발자가 될 것입니다.</p>
+
+    <a>0001211@naver.com</a>
+    <a>010-9188-4095</a>
+    <a>GitHub</a>
   </body>
 </html>
