개인 정보 줄바꿈

--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <title>김진우 포트폴리오</title>
   </head>
   <body>
+    <!--간단 소개-->
     <h2>안녕하세요, 한 길만 걸어온 개발자 김진우라고 합니다.</h2>
     <p>중학교때는 각종 컴퓨터 자격증을 따고</p>
     <p>고등학교때는 컴퓨터미디어보안과에 입학하여 컴퓨터 구조와 네트워크 및 간단한 언어를 배우고</p>
     <p>대학교때는 개발자가 되고 싶어 IT소프트웨어과에 입학하게 개발의 지식을 넓여왔습니다.</p>
-    <p>그리고 이제는 한 길로만 걸어온 길을 따라 어엿한 개발자가 될 것입니다.</p>
+    <p>그리고 이제는 <strong>한 길로</strong>만 걸어온 길을 따라 어엿한 개발자가 될 것입니다.</p>
 
-    <a>0001211@naver.com</a>
-    <a>010-9188-4095</a>
+
+    <a>0001211@naver.com</a> <br>
+    <a>010-9188-4095</a> <br>
     <a>GitHub</a>
   </body>
 </html>
