--- a/index.html
+++ b/index.html
@@ -7,14 +7,40 @@
   <body>
     <!--간단 소개-->
     <h2>안녕하세요, 한 길만 걸어온 개발자 김진우라고 합니다.</h2>
-    <p>중학교때는 각종 컴퓨터 자격증을 따고</p>
-    <p>고등학교때는 컴퓨터미디어보안과에 입학하여 컴퓨터 구조와 네트워크 및 간단한 언어를 배우고</p>
-    <p>대학교때는 개발자가 되고 싶어 IT소프트웨어과에 입학하게 개발의 지식을 넓여왔습니다.</p>
-    <p>그리고 이제는 <strong>한 길로</strong>만 걸어온 길을 따라 어엿한 개발자가 될 것입니다.</p>
+    <p>중학생 때 컴퓨터에 흥미가 생겨 컴퓨터학원을 다니며 자격증을 취득했습니다.</p>
+    <p>고등학생 때는 컴퓨터미디어보안과에 입학하여 컴퓨터 구조와 네트워크 및 간단한 언어를 배워 전문지식을 쌓기 시작했습니다.</p>
+    <p>대학생 때는 개발자가 되고 싶어 IT소프트웨어과에 입학하게 개발의 지식을 넓혀왔습니다.</p>
+    <p>이제는 걸어온 길을 따라 어엿한 개발자가 될 것입니다.</p>
 
-
+    <!--개인정보-->
     <a>0001211@naver.com</a> <br>
     <a>010-9188-4095</a> <br>
     <a>GitHub</a>
+
+    <!--자격증-->
+    <h2>자격증</h2>
+    <p>정보처리기능사</p>
+    <p>통신선로기능사</p>
+    <p>ITQ한글</p>
+    <p>ITQ파워포인트</p>
+    <p>ITQ엑셀</p>
+    <p>ITQ인터넷</p>
+
+    <!--학력-->
+    <h2>학력</h2>
+    <p>신구대학교 IT소프트웨어과</p>
+    <p>2019.03~2024.02</p>
+    <p>동일공업고등학교 컴퓨터미디어보안과</p>
+    <p>2016.03~2019.02</p>
+    
+    <!--프로젝트-->
+    <h2>프로젝트</h2>
+    <h3>다차자</h3>
+
+    <!--기술-->
+    <h2>기술</h2>
+    <h3>프론트엔드</h3>
+    <h3>백엔드</h3>
+    <h3>툴</h3>
   </body>
 </html>
