라인 색 변경

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a>010-9188-4095</a> <br>
     <a>GitHub</a>
 
-    <hr style="border: solid 1px black;">
+    <hr style="border: solid 1px gray;">
 
     <!--자격증-->
     <h2>자격증</h2>
@@ -35,13 +35,13 @@
     <p>동일공업고등학교 컴퓨터미디어보안과</p>
     <p>2016.03~2019.02</p>
     
-    <hr style="border: solid 1px black;">
+    <hr style="border: solid 1px gray;">
 
     <!--프로젝트-->
     <h2>프로젝트</h2>
     <h3>다차자</h3>
 
-    <hr style="border: solid 1px black;">
+    <hr style="border: solid 1px grey;">
 
     <!--기술-->
     <h2>기술</h2>
